# task_from_architect

./: Dockerfile  README.md  docker-compose.yml  example.env  pyproject.toml
app/app/: settings.py  urls.py
app/users/: admin.py  forms.py  mixins.py  models.py  urls.py  views.py
app/users/migrations/: 0001_initial.py  0002_person_is_verified_email_emailverification.py  0003_rename_expipation_emailverification_expiration.py
app/users/templates/: email_verification.html  index.html  password_change_done.html  password_reset_complete.html  password_reset_done.html  password_reset_email.html  user_delete.html  user_detail.html  user_edit.html  user_login.html  user_password_change.html  user_register.html
