[tool.poetry]
name = "djproject-htps"
version = "0.1.0"
description = ""
authors = ["Andrey Usov <nkt.andr@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.1"
environs = "^10.3.0"
psycopg = {extras = ["binary"], version = "^3.1.18"}
psycopg-binary = "^3.1.18"
django-debug-toolbar = "^4.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
